# bmi323-driver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
embassy-stm32g030f6-examples/: Cargo.toml  README.md
embassy-stm32g030f6-examples/.cargo/: config.toml
examples/: async_i2c_alt_config.rs  async_i2c_flat.rs  async_i2c_interrupt.rs  async_i2c_no_motion.rs  async_i2c_orientation.rs  async_i2c_self_test.rs  async_i2c_significant_motion.rs  async_i2c_step_counter.rs  async_i2c_tap.rs  async_i2c_tilt.rs  blocking_i2c_basic.rs
src/: async_driver.rs  blocking_driver.rs  driver.rs  lib.rs  registers.rs  tests.rs  transport.rs  types.rs
tests/: async_i2c_transactions.rs  async_spi_transactions.rs  blocking_i2c_transactions.rs  blocking_spi_transactions.rs
