[package]
name = "bmi323-driver"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Generic no_std driver for the Bosch BMI323 IMU"
authors = ["Janne Snabb"]
readme = "README.md"
documentation = "https://docs.rs/bmi323-driver"
keywords = ["bmi323", "imu", "embedded-hal", "embassy", "sensor"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/snabb/bmi323-driver"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/examples/*.rs",
    "/src/*.rs",
    "/tests/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1", "embedded-hal-async"] }
